# SPF-Stock-Analyzer

./: .gitignore  .replit  CONTRIBUTING.md  README.md  app.py  home.py  main.py  pyproject.toml  replit.nix  research.py  technicals.py  utils.py
.streamlit/: secrets.toml
tabs/: __init__.py  research.py  technicals.py
